app/main.sass
$fa-font-path: "../bower_components/font-awesome/fonts"

// bower:scss
@import font-awesome/scss/font-awesome.scss
@import colors/sass/colors.scss
// endbower


@import components/Homepage/Homepage

$off-black: #1A1A1A

body, html
    height: 100%

body
    margin: 0
    text-align: center
    background-color: $off-black
    font-family: "Open Sans", sans-serif
    color: $silver

.background-image
    background: url(/images/bg.jpg) no-repeat center center fixed
    background-size: cover
    filter: blur(3px)
    position: absolute
    width: 100%
    height: 100%
    z-index: -1

.page-wrapper
    height: 100%
    min-height: 100%

nav.navbar
    width: 100%
    height: 7%
    border-top: 1px $silver dashed
    border-bottom: 1px $silver dashed
    background-color: $off-black
    display: flex
    align-items: center
    justify-content: space-around

    .nav-item
        width: 100%
        height: 100%
        display: flex
        align-items: center
        justify-content: center
        .cl-effect-1 a::before,

        &:after, &:before
            display: inline-block
            opacity: 0
            transition: transform 0.3s, opacity 0.2s

        &::before
            margin-right: 10px
            content: '['
            -webkit-transform: translateX(20px)
            -moz-transform: translateX(20px)
            transform: translateX(20px)

        &:after
            margin-left: 10px
            content: ']'
            transform: translateX(-20px)

        &:hover:before,
        &:hover:after,
        &:focus:before,
        &:focus:after
            opacity: 1
            transform: translateX(0px)

        &.active:before,
        &.active:after
            opacity: 1
            transform: translateX(0px)

header.header
    height: 15%
    width: 100%
    display: flex
    align-items: center
    justify-content: center
    flex-direction: column

    .page-title
        display: flex
        align-items: center
        justify-content: center
        font-size: 2.2rem
        letter-spacing: -1px
        font-weight: 700
        border-top: 1px $silver dashed
        border-bottom: 1px $silver dashed
        background-color: $off-black
        width: 100%

        img
            height: 2.2rem
            margin-right: 10px

        h1
            margin-top: 10px
            margin-bottom: 10px

.route-wrapper
    height: 78%
    width: 100%
    display: flex
    align-items: center
    justify-content: center

    .route-container
        width: 75%
        height: 75%
        border: 1px $silver dashed
        background-color: $off-black

